--- a/css/main_css.css
+++ b/css/main_css.css
@@ -1,12 +1,14 @@
-/*
-To change this license header, choose License Headers in Project Properties.
-To change this template file, choose Tools | Templates
-and open the template in the editor.
+/**
+ * 
+ *
+
+ * @package     EQM
+ * @copyright   Copyright (c) 2014, Eric Rathmann
+ * @license     http://opensource.org/licenses/gpl-2.0.php GNU Public License
+ * @since       1.0
+
 */
-/* 
-    Created on : Feb 2, 2015, 7:15:30 PM
-    Author     : Eric
-*/
+
 
     
 		.eric_container
